--- a/googleMaps/pubspec.yaml
+++ b/googleMaps/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.1
+  flutter_polyline_points: ^1.0.0
+  location: ^4.4.0
+  flutter_svg: ^1.1.6
+
 
 dev_dependencies:
   flutter_test:
